tests/fixtures/invalid/struct_pointer_to_pointer_field.c
struct Bad {
    int **slot;
};

int main(void) {
    return 0;
}
